--- a/Catch the Mole/Catch the Mole/Base.lproj/Main.storyboard
+++ b/Catch the Mole/Catch the Mole/Base.lproj/Main.storyboard
@@ -23,14 +23,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="High Score: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pv7-O9-3ku">
+                                <rect key="frame" x="111" y="237" width="170" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Counter:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8dX-LC-4E4">
-                                <rect key="frame" x="72" y="233" width="248" height="34"/>
+                                <rect key="frame" x="72" y="313" width="248" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R6Y-xs-2Wy">
-                                <rect key="frame" x="144" y="301" width="105" height="35"/>
+                                <rect key="frame" x="144" y="381" width="105" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Play Game"/>
@@ -45,6 +52,7 @@
                     <navigationItem key="navigationItem" id="Ubt-IP-PrR"/>
                     <connections>
                         <outlet property="counterLabel" destination="8dX-LC-4E4" id="NkD-CR-VdP"/>
+                        <outlet property="highScoreLabel" destination="pv7-O9-3ku" id="Dc4-X8-k1j"/>
                         <segue destination="KJa-7H-NPE" kind="show" identifier="toGameVC" id="3FL-gO-5B1"/>
                     </connections>
                 </viewController>
